[RestfulAPI][Benny] refact: change get employee list, get employee by id, get employee list by page with Employee Response.