@@ -1,34 +1,51 @@
 package com.afs.restfulapi.employee;
 
+import com.afs.restfulapi.dto.EmployeeRequest;
+import com.afs.restfulapi.dto.EmployeeResponse;
+import com.afs.restfulapi.mapper.EmployeeMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/employees")
 public class EmployeeController {
     private final EmployeeService employeeService;
+    private final EmployeeMapper employeeMapper;
 
-    public EmployeeController(EmployeeService employeeService) {
+    public EmployeeController(EmployeeService employeeService, EmployeeMapper employeeMapper) {
         this.employeeService = employeeService;
+        this.employeeMapper = employeeMapper;
     }
 
     @GetMapping
-    public List<Employee> getEmployeeList() {
-        return this.employeeService.getEmployeeList();
+    public List<EmployeeResponse> getEmployeeList() {
+        return this.employeeService
+                .getEmployeeList()
+                .stream()
+                .map(employeeMapper::toResponse)
+                .collect(Collectors.toList())
+                ;
     }
 
     @GetMapping("/{id}")
-    public Employee getEmployeeById(@PathVariable("id") Integer id) {
-        return this.employeeService.getEmployeeById(id);
+    public EmployeeResponse getEmployeeById(@PathVariable("id") Integer id) {
+        return employeeMapper.toResponse(employeeService.getEmployeeById(id));
     }
 
     @RequestMapping(params = {"page", "pageSize"}, method = RequestMethod.GET)
-    public List<Employee> getEmployeeListByPage(@RequestParam(value = "page", defaultValue = "0") int page,
-                                                    @RequestParam(value = "pageSize", defaultValue = "5") int pageSize) {
-        return this.employeeService.getEmployeeListByPage(page, pageSize).toList();
+    public List<EmployeeResponse> getEmployeeListByPage (
+                                    @RequestParam(value = "page", defaultValue = "0") int page,
+                                    @RequestParam(value = "pageSize", defaultValue = "5") int pageSize) {
+        return this.employeeService
+                .getEmployeeListByPage(page, pageSize)
+                .stream()
+                .map(employeeMapper::toResponse)
+                .collect(Collectors.toList())
+                ;
     }
 
     @RequestMapping(params = {"gender"}, method = RequestMethod.GET)
@@ -38,13 +55,13 @@ public class EmployeeController {
 
     @ResponseStatus(HttpStatus.CREATED)
     @PostMapping
-    public Employee addEmployee(@RequestBody Employee employee) {
-        return this.employeeService.addEmployee(employee);
+    public Employee addEmployee(@RequestBody EmployeeRequest employeeRequest) {
+        return this.employeeService.addEmployee(employeeMapper.toEntity(employeeRequest));
     }
 
     @PutMapping("/{id}")
-    public Employee updateEmployeeById(@PathVariable("id") Integer id, @RequestBody Employee employee) {
-        return this.employeeService.updateEmployee(id, employee);
+    public Employee updateEmployeeById(@PathVariable("id") Integer id, @RequestBody EmployeeRequest employeeRequest) {
+        return this.employeeService.updateEmployee(id, employeeMapper.toEntity(employeeRequest));
     }
 
     @DeleteMapping("/{id}")
